# PRO_LAB2

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/logic/: MPIHandler.cpp  MPIHandler.hpp  Math.cpp  Math.hpp
src/ui/: EnterWidget.cpp  EnterWidget.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  MenuWidget.cpp  MenuWidget.h  MenuWidget.hpp  NotificationWidget.cpp  NotificationWidget.hpp
